--- a/app.json
+++ b/app.json
@@ -50,11 +50,18 @@
         }
       ],
       "expo-font",
-      "expo-web-browser"
+      "expo-web-browser",
+      "@react-native-google-signin/google-signin"
     ],
     "experiments": {
       "typedRoutes": true,
       "reactCompiler": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "76e9d16f-ca61-467a-99b8-20e8b2f855ca"
+      }
     }
   }
 }
